robballen75-Salesforce/4-7-15/src/objects/PatentScans__c.object
<CustomObject>
    <description>Stores the scans done in patent companion by user and by date, along with issues found.</description>
    <fields>
        <fullName>Antecedent_Basis_Count__c</fullName>
        <description>The number of Antecedent Basis issues found during this scan.</description>
        <label>Antecedent Basis Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The contact who performed the scan.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patent Scans</relationshipLabel>
        <relationshipName>Patent_Scans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Element_References_Count__c</fullName>
        <description>The number of Element Reference issues found during this scan.</description>
        <label>Element References Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <description>The time this patent scan record was created</description>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Limiting_Language_Count__c</fullName>
        <description>The number of Limiting Language issues found during this scan.</description>
        <label>Limiting Language Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scan_Time__c</fullName>
        <description>The date / time this scan was run.</description>
        <label>Scan Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SimilarSpellingCount__c</fullName>
        <description>The number of Similar Spelling issues found during this scan.</description>
        <label>Similar Spelling Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TextLength__c</fullName>
        <description>The size (in bytes) of the patent that was analyzed.</description>
        <inlineHelpText>The size (in bytes) of the patent that was analyzed.  Used to determine if they are running the same patent multiple times.</inlineHelpText>
        <label>Text Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsupported_Terms_Count__c</fullName>
        <description>The number of Unsupported Terms issues found during this scan.</description>
        <label>Unsupported Terms Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Patent Scan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Scan_Time__c</columns>
        <columns>Contact__c</columns>
        <columns>Last_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Patent Scan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patent Scans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>